// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`§079, §074 — tones, surfaces and weight, across ten themes > at 1-bit 1`] = `
"── dark (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── light (light)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── hcDark (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── hcLight (light)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── ink (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── warm (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── nord (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── viol (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── mono (dark)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── paper (light)
  · tones
  default       —        plain
  dim           —        faint
  muted         —        faint
  ok            —        bold
  warn          —        bold
  error         —        bold
  info          —        plain
  accent        —        bold
  meta          —        plain
  identifier    —        bold
  · surfaces
  bg            —        plain
  bgElev        —        plain
  bgDeep        —        plain
  selection     —        plain
  meterFill     —        plain
  border        —        plain
  borderStrong  —        plain
  diffAdd       —        plain
  diffRemove    —        plain
  errorGround   —        plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      —        plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain"
`;

exports[`§079, §074 — tones, surfaces and weight, across ten themes > at 4-bit 1`] = `
"── dark (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a3       plain
  meta          a13      plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── light (light)
  · tones
  default       a0       plain
  dim           a8       plain
  muted         a8       plain
  ok            a2       plain
  warn          a3       plain
  error         a1       plain
  info          a4       plain
  accent        a12      plain
  meta          a5       plain
  identifier    a6       plain
  · surfaces
  bg            a15      plain
  bgElev        a15      plain
  bgDeep        a15      plain
  selection     —        plain
  meterFill     —        plain
  border        a7       plain
  borderStrong  a8       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a1       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a15      plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── hcDark (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a13      plain
  meta          a5       plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── hcLight (light)
  · tones
  default       a0       plain
  dim           a8       plain
  muted         a8       plain
  ok            a2       plain
  warn          a3       plain
  error         a1       plain
  info          a4       plain
  accent        a12      plain
  meta          a5       plain
  identifier    a6       plain
  · surfaces
  bg            a15      plain
  bgElev        a15      plain
  bgDeep        a15      plain
  selection     —        plain
  meterFill     —        plain
  border        a7       plain
  borderStrong  a8       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a1       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a15      plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── ink (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a3       plain
  meta          a13      plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── warm (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a3       plain
  meta          a13      plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── nord (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a3       plain
  meta          a13      plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── viol (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a3       plain
  meta          a13      plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── mono (dark)
  · tones
  default       a15      plain
  dim           a7       plain
  muted         a8       plain
  ok            a10      plain
  warn          a11      plain
  error         a9       plain
  info          a14      plain
  accent        a3       plain
  meta          a13      plain
  identifier    a6       plain
  · surfaces
  bg            a0       plain
  bgElev        a0       plain
  bgDeep        a0       plain
  selection     —        plain
  meterFill     —        plain
  border        a8       plain
  borderStrong  a7       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a9       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a0       plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain
── paper (light)
  · tones
  default       a0       plain
  dim           a8       plain
  muted         a8       plain
  ok            a2       plain
  warn          a3       plain
  error         a1       plain
  info          a4       plain
  accent        a12      plain
  meta          a5       plain
  identifier    a6       plain
  · surfaces
  bg            a15      plain
  bgElev        a15      plain
  bgDeep        a15      plain
  selection     —        plain
  meterFill     —        plain
  border        a7       plain
  borderStrong  a8       plain
  diffAdd       a2       plain
  diffRemove    a1       plain
  errorGround   a1       plain
  mAuto         —        plain
  mAccept       —        plain
  mPlan         —        plain
  mManual       —        plain
  skipGround    —        plain
  focusGround   —        plain
  errorInk      a15      plain
  mInk          —        plain
  skipInk       —        plain
  pick          —        plain
  pickInk       —        plain
  link          —        plain
  linkInk       —        plain
  chosen        —        plain
  chosenInk     —        plain"
`;

exports[`§079, §074 — tones, surfaces and weight, across ten themes > at 8-bit 1`] = `
"── dark (dark)
  · tones
  default       x188     plain
  dim           x245     plain
  muted         x245     plain
  ok            x107     plain
  warn          x179     plain
  error         x203     plain
  info          x74      plain
  accent        x216     plain
  meta          x140     plain
  identifier    x109     plain
  · surfaces
  bg            x234     plain
  bgElev        x235     plain
  bgDeep        x233     plain
  selection     x237     plain
  meterFill     x65      plain
  border        x236     plain
  borderStrong  x237     plain
  diffAdd       x234     plain
  diffRemove    x52      plain
  errorGround   x203     plain
  mAuto         x101     plain
  mAccept       x60      plain
  mPlan         x24      plain
  mManual       x237     plain
  skipGround    x88      plain
  focusGround   x236     plain
  errorInk      x231     plain
  mInk          x255     plain
  skipInk       x224     plain
  pick          x216     plain
  pickInk       x16      plain
  link          x109     plain
  linkInk       x16      plain
  chosen        x107     plain
  chosenInk     x16      plain
── light (light)
  · tones
  default       x237     plain
  dim           x242     plain
  muted         x242     plain
  ok            x65      plain
  warn          x94      plain
  error         x124     plain
  info          x24      plain
  accent        x27      plain
  meta          x90      plain
  identifier    x31      plain
  · surfaces
  bg            x231     plain
  bgElev        x255     plain
  bgDeep        x254     plain
  selection     x153     plain
  meterFill     x151     plain
  border        x251     plain
  borderStrong  x251     plain
  diffAdd       x194     plain
  diffRemove    x255     plain
  errorGround   x124     plain
  mAuto         x223     plain
  mAccept       x253     plain
  mPlan         x253     plain
  mManual       x253     plain
  skipGround    x88      plain
  focusGround   x253     plain
  errorInk      x231     plain
  mInk          x235     plain
  skipInk       x255     plain
  pick          x27      plain
  pickInk       x231     plain
  link          x31      plain
  linkInk       x231     plain
  chosen        x65      plain
  chosenInk     x231     plain
── hcDark (dark)
  · tones
  default       x231     plain
  dim           x251     plain
  muted         x247     plain
  ok            x34      plain
  warn          x136     plain
  error         x203     plain
  info          x75      plain
  accent        x141     plain
  meta          x207     plain
  identifier    x37      plain
  · surfaces
  bg            x16      plain
  bgElev        x233     plain
  bgDeep        x234     plain
  selection     x178     plain
  meterFill     x22      plain
  border        x243     plain
  borderStrong  x248     plain
  diffAdd       x22      plain
  diffRemove    x52      plain
  errorGround   x203     plain
  mAuto         x136     plain
  mAccept       x141     plain
  mPlan         x39      plain
  mManual       x247     plain
  skipGround    x196     plain
  focusGround   x25      plain
  errorInk      x16      plain
  mInk          x16      plain
  skipInk       x16      plain
  pick          x141     plain
  pickInk       x16      plain
  link          x37      plain
  linkInk       x16      plain
  chosen        x34      plain
  chosenInk     x16      plain
── hcLight (light)
  · tones
  default       x16      plain
  dim           x235     plain
  muted         x239     plain
  ok            x22      plain
  warn          x52      plain
  error         x124     plain
  info          x53      plain
  accent        x55      plain
  meta          x89      plain
  identifier    x23      plain
  · surfaces
  bg            x231     plain
  bgElev        x231     plain
  bgDeep        x253     plain
  selection     x53      plain
  meterFill     x151     plain
  border        x16      plain
  borderStrong  x16      plain
  diffAdd       x194     plain
  diffRemove    x224     plain
  errorGround   x124     plain
  mAuto         x88      plain
  mAccept       x55      plain
  mPlan         x53      plain
  mManual       x236     plain
  skipGround    x124     plain
  focusGround   x110     plain
  errorInk      x231     plain
  mInk          x231     plain
  skipInk       x231     plain
  pick          x55      plain
  pickInk       x231     plain
  link          x23      plain
  linkInk       x231     plain
  chosen        x22      plain
  chosenInk     x231     plain
── ink (dark)
  · tones
  default       x252     plain
  dim           x246     plain
  muted         x102     plain
  ok            x114     plain
  warn          x179     plain
  error         x210     plain
  info          x147     plain
  accent        x209     plain
  meta          x141     plain
  identifier    x80      plain
  · surfaces
  bg            x234     plain
  bgElev        x234     plain
  bgDeep        x233     plain
  selection     x235     plain
  meterFill     x65      plain
  border        x235     plain
  borderStrong  x238     plain
  diffAdd       x235     plain
  diffRemove    x234     plain
  errorGround   x167     plain
  mAuto         x101     plain
  mAccept       x60      plain
  mPlan         x24      plain
  mManual       x235     plain
  skipGround    x52      plain
  focusGround   x235     plain
  errorInk      x16      plain
  mInk          x255     plain
  skipInk       x255     plain
  pick          x209     plain
  pickInk       x16      plain
  link          x80      plain
  linkInk       x16      plain
  chosen        x114     plain
  chosenInk     x16      plain
── warm (dark)
  · tones
  default       x253     plain
  dim           x244     plain
  muted         x244     plain
  ok            x150     plain
  warn          x179     plain
  error         x167     plain
  info          x110     plain
  accent        x215     plain
  meta          x139     plain
  identifier    x116     plain
  · surfaces
  bg            x234     plain
  bgElev        x235     plain
  bgDeep        x233     plain
  selection     x235     plain
  meterFill     x23      plain
  border        x235     plain
  borderStrong  x237     plain
  diffAdd       x235     plain
  diffRemove    x235     plain
  errorGround   x167     plain
  mAuto         x94      plain
  mAccept       x238     plain
  mPlan         x238     plain
  mManual       x235     plain
  skipGround    x52      plain
  focusGround   x235     plain
  errorInk      x231     plain
  mInk          x255     plain
  skipInk       x255     plain
  pick          x215     plain
  pickInk       x16      plain
  link          x73      plain
  linkInk       x16      plain
  chosen        x107     plain
  chosenInk     x16      plain
── nord (dark)
  · tones
  default       x254     plain
  dim           x247     plain
  muted         x246     plain
  ok            x108     plain
  warn          x222     plain
  error         x173     plain
  info          x67      plain
  accent        x216     plain
  meta          x139     plain
  identifier    x109     plain
  · surfaces
  bg            x235     plain
  bgElev        x238     plain
  bgDeep        x235     plain
  selection     x60      plain
  meterFill     x65      plain
  border        x239     plain
  borderStrong  x240     plain
  diffAdd       x235     plain
  diffRemove    x235     plain
  errorGround   x174     plain
  mAuto         x101     plain
  mAccept       x239     plain
  mPlan         x24      plain
  mManual       x239     plain
  skipGround    x52      plain
  focusGround   x239     plain
  errorInk      x16      plain
  mInk          x255     plain
  skipInk       x255     plain
  pick          x216     plain
  pickInk       x16      plain
  link          x109     plain
  linkInk       x16      plain
  chosen        x108     plain
  chosenInk     x16      plain
── viol (dark)
  · tones
  default       x189     plain
  dim           x103     plain
  muted         x103     plain
  ok            x115     plain
  warn          x179     plain
  error         x174     plain
  info          x110     plain
  accent        x140     plain
  meta          x175     plain
  identifier    x116     plain
  · surfaces
  bg            x234     plain
  bgElev        x235     plain
  bgDeep        x233     plain
  selection     x60      plain
  meterFill     x65      plain
  border        x236     plain
  borderStrong  x60      plain
  diffAdd       x235     plain
  diffRemove    x235     plain
  errorGround   x168     plain
  mAuto         x101     plain
  mAccept       x61      plain
  mPlan         x60      plain
  mManual       x237     plain
  skipGround    x52      plain
  focusGround   x235     plain
  errorInk      x16      plain
  mInk          x255     plain
  skipInk       x255     plain
  pick          x183     plain
  pickInk       x16      plain
  link          x116     plain
  linkInk       x16      plain
  chosen        x115     plain
  chosenInk     x16      plain
── mono (dark)
  · tones
  default       x254     plain
  dim           x247     plain
  muted         x245     plain
  ok            x250     plain
  warn          x252     plain
  error         x231     plain
  info          x248     plain
  accent        x255     plain
  meta          x245     plain
  identifier    x251     plain
  · surfaces
  bg            x233     plain
  bgElev        x234     plain
  bgDeep        x233     plain
  selection     x236     plain
  meterFill     x240     plain
  border        x235     plain
  borderStrong  x237     plain
  diffAdd       x234     plain
  diffRemove    x236     plain
  errorGround   x254     plain
  mAuto         x239     plain
  mAccept       x237     plain
  mPlan         x236     plain
  mManual       x235     plain
  skipGround    x240     plain
  focusGround   x235     plain
  errorInk      x233     plain
  mInk          x255     plain
  skipInk       x231     plain
  pick          x231     plain
  pickInk       x16      plain
  link          x251     plain
  linkInk       x16      plain
  chosen        x250     plain
  chosenInk     x16      plain
── paper (light)
  · tones
  default       x236     plain
  dim           x241     plain
  muted         x242     plain
  ok            x65      plain
  warn          x94      plain
  error         x124     plain
  info          x31      plain
  accent        x26      plain
  meta          x53      plain
  identifier    x23      plain
  · surfaces
  bg            x255     plain
  bgElev        x255     plain
  bgDeep        x254     plain
  selection     x254     plain
  meterFill     x187     plain
  border        x252     plain
  borderStrong  x250     plain
  diffAdd       x255     plain
  diffRemove    x254     plain
  errorGround   x88      plain
  mAuto         x223     plain
  mAccept       x189     plain
  mPlan         x254     plain
  mManual       x252     plain
  skipGround    x88      plain
  focusGround   x253     plain
  errorInk      x231     plain
  mInk          x235     plain
  skipInk       x255     plain
  pick          x26      plain
  pickInk       x231     plain
  link          x23      plain
  linkInk       x231     plain
  chosen        x65      plain
  chosenInk     x231     plain"
`;

exports[`§079, §074 — tones, surfaces and weight, across ten themes > at 24-bit 1`] = `
"── dark (dark)
  · tones
  default       #d4d4d4  plain
  dim           #8a8a8a  plain
  muted         #8c8c8c  plain
  ok            #87b86c  plain
  warn          #d4b35a  plain
  error         #f05a5a  plain
  info          #7faecf  plain
  accent        #e8a87c  plain
  meta          #b89cd2  plain
  identifier    #7fb8b8  plain
  · surfaces
  bg            #1a1a1a  plain
  bgElev        #222222  plain
  bgDeep        #141414  plain
  selection     #264057  plain
  meterFill     #315a34  plain
  border        #2c2c2c  plain
  borderStrong  #3a3a3a  plain
  diffAdd       #002600  plain
  diffRemove    #490000  plain
  errorGround   #c62828  plain
  mAuto         #6b5a1f  plain
  mAccept       #4a3a63  plain
  mPlan         #2a4a63  plain
  mManual       #3a3a3a  plain
  skipGround    #7a1414  plain
  focusGround   #2e2e2e  plain
  errorInk      #ffffff  plain
  mInk          #f2eede  plain
  skipInk       #ffe8e8  plain
  pick          #e8a87c  plain
  pickInk       #000000  plain
  link          #7fb8b8  plain
  linkInk       #000000  plain
  chosen        #87b86c  plain
  chosenInk     #000000  plain
── light (light)
  · tones
  default       #383a42  plain
  dim           #696c77  plain
  muted         #6e6f76  plain
  ok            #3c793c  plain
  warn          #916301  plain
  error         #c21f10  plain
  info          #0173a5  plain
  accent        #1f60f0  plain
  meta          #a626a4  plain
  identifier    #07768c  plain
  · surfaces
  bg            #fafafa  plain
  bgElev        #f0f0f0  plain
  bgDeep        #e8e8e8  plain
  selection     #c9ddf5  plain
  meterFill     #c6e2bd  plain
  border        #d3d3d3  plain
  borderStrong  #c8c8c8  plain
  diffAdd       #d2ffd2  plain
  diffRemove    #fff0f0  plain
  errorGround   #a81f12  plain
  mAuto         #f4e3ae  plain
  mAccept       #e8d4ee  plain
  mPlan         #cfe4f5  plain
  mManual       #e0e0e0  plain
  skipGround    #8f1a10  plain
  focusGround   #e2e2e2  plain
  errorInk      #ffffff  plain
  mInk          #2a2622  plain
  skipInk       #fff2f0  plain
  pick          #1f60f0  plain
  pickInk       #ffffff  plain
  link          #07768c  plain
  linkInk       #ffffff  plain
  chosen        #3c793c  plain
  chosenInk     #ffffff  plain
── hcDark (dark)
  · tones
  default       #ffffff  plain
  dim           #c7c7c7  plain
  muted         #9f9f9f  plain
  ok            #0ab827  plain
  warn          #c99700  plain
  error         #ff7171  plain
  info          #2ea5fa  plain
  accent        #b887fc  plain
  meta          #eb68f7  plain
  identifier    #0eb2a5  plain
  · surfaces
  bg            #000000  plain
  bgElev        #121212  plain
  bgDeep        #1c1c1c  plain
  selection     #efc51c  plain
  meterFill     #005f16  plain
  border        #767676  plain
  borderStrong  #a6a6a6  plain
  diffAdd       #003c00  plain
  diffRemove    #4a0000  plain
  errorGround   #ff7171  plain
  mAuto         #c99700  plain
  mAccept       #b887fc  plain
  mPlan         #2ea5fa  plain
  mManual       #9f9f9f  plain
  skipGround    #ff3b3b  plain
  focusGround   #234f92  plain
  errorInk      #000000  plain
  mInk          #000000  plain
  skipInk       #000000  plain
  pick          #b887fc  plain
  pickInk       #000000  plain
  link          #0eb2a5  plain
  linkInk       #000000  plain
  chosen        #0ab827  plain
  chosenInk     #000000  plain
── hcLight (light)
  · tones
  default       #000000  plain
  dim           #2b2b2b  plain
  muted         #525252  plain
  ok            #005c00  plain
  warn          #6b4200  plain
  error         #a80000  plain
  info          #003d8f  plain
  accent        #5b00a8  plain
  meta          #8a006e  plain
  identifier    #00595e  plain
  · surfaces
  bg            #ffffff  plain
  bgElev        #ebebeb  plain
  bgDeep        #dadada  plain
  selection     #46176d  plain
  meterFill     #b5dbad  plain
  border        #000000  plain
  borderStrong  #000000  plain
  diffAdd       #c4f2c4  plain
  diffRemove    #ffd2d2  plain
  errorGround   #a80000  plain
  mAuto         #6b4200  plain
  mAccept       #5b00a8  plain
  mPlan         #003d8f  plain
  mManual       #3a3a3a  plain
  skipGround    #a80000  plain
  focusGround   #7face3  plain
  errorInk      #ffffff  plain
  mInk          #ffffff  plain
  skipInk       #ffffff  plain
  pick          #5b00a8  plain
  pickInk       #ffffff  plain
  link          #00595e  plain
  linkInk       #ffffff  plain
  chosen        #005c00  plain
  chosenInk     #ffffff  plain
── ink (dark)
  · tones
  default       #c9d1d9  plain
  dim           #8b949e  plain
  muted         #7d8794  plain
  ok            #6fbf73  plain
  warn          #d2a24c  plain
  error         #ff8585  plain
  info          #6cb6ff  plain
  accent        #f0883e  plain
  meta          #b083f0  plain
  identifier    #56cfcf  plain
  · surfaces
  bg            #14181d  plain
  bgElev        #1c2128  plain
  bgDeep        #0f1317  plain
  selection     #1f3a52  plain
  meterFill     #2f5636  plain
  border        #2b323b  plain
  borderStrong  #3c4552  plain
  diffAdd       #0a2a12  plain
  diffRemove    #3d1218  plain
  errorGround   #c94f4f  plain
  mAuto         #6b5522  plain
  mAccept       #4a3566  plain
  mPlan         #234a6b  plain
  mManual       #333b45  plain
  skipGround    #7a2020  plain
  focusGround   #242c35  plain
  errorInk      #000000  plain
  mInk          #f0f4f8  plain
  skipInk       #ffeaea  plain
  pick          #f0883e  plain
  pickInk       #000000  plain
  link          #56cfcf  plain
  linkInk       #000000  plain
  chosen        #6fbf73  plain
  chosenInk     #000000  plain
── warm (dark)
  · tones
  default       #e0d8d0  plain
  dim           #a09488  plain
  muted         #948a80  plain
  ok            #94b872  plain
  warn          #d9a94e  plain
  error         #ea7f78  plain
  info          #79a9c4  plain
  accent        #e89f5c  plain
  meta          #c194c9  plain
  identifier    #77bdb0  plain
  · surfaces
  bg            #1c1917  plain
  bgElev        #252220  plain
  bgDeep        #141211  plain
  selection     #3d2f22  plain
  meterFill     #2f5140  plain
  border        #332e2a  plain
  borderStrong  #443d38  plain
  diffAdd       #1d2a15  plain
  diffRemove    #3a1a18  plain
  errorGround   #b8514a  plain
  mAuto         #6e5423  plain
  mAccept       #523a5c  plain
  mPlan         #2c4a5c  plain
  mManual       #3e3833  plain
  skipGround    #7a2420  plain
  focusGround   #302b28  plain
  errorInk      #fff6f2  plain
  mInk          #f7f2ea  plain
  skipInk       #fff0ec  plain
  pick          #e89f5c  plain
  pickInk       #000000  plain
  link          #77bdb0  plain
  linkInk       #000000  plain
  chosen        #94b872  plain
  chosenInk     #000000  plain
── nord (dark)
  · tones
  default       #d8dee9  plain
  dim           #a6aec0  plain
  muted         #98a0b0  plain
  ok            #a3be8c  plain
  warn          #ebcb8b  plain
  error         #e8967c  plain
  info          #81a1c1  plain
  accent        #ebae76  plain
  meta          #ba96b3  plain
  identifier    #88c0d0  plain
  · surfaces
  bg            #2e3440  plain
  bgElev        #3b4252  plain
  bgDeep        #272c36  plain
  selection     #3f5570  plain
  meterFill     #4e6544  plain
  border        #434c5e  plain
  borderStrong  #4c566a  plain
  diffAdd       #2f3f33  plain
  diffRemove    #43303a  plain
  errorGround   #bf616a  plain
  mAuto         #6b5b32  plain
  mAccept       #5a4557  plain
  mPlan         #3b5771  plain
  mManual       #434c5e  plain
  skipGround    #7a3238  plain
  focusGround   #485264  plain
  errorInk      #000000  plain
  mInk          #eceff4  plain
  skipInk       #fdf2f4  plain
  pick          #ebae76  plain
  pickInk       #000000  plain
  link          #88c0d0  plain
  linkInk       #000000  plain
  chosen        #a3be8c  plain
  chosenInk     #000000  plain
── viol (dark)
  · tones
  default       #ddd6f3  plain
  dim           #9d95b8  plain
  muted         #8f88a8  plain
  ok            #8fd1a0  plain
  warn          #e0c07a  plain
  error         #f08fa0  plain
  info          #8fb8e8  plain
  accent        #c79bf0  plain
  meta          #e89bd0  plain
  identifier    #7fd4d4  plain
  · surfaces
  bg            #1a1725  plain
  bgElev        #231f31  plain
  bgDeep        #13111b  plain
  selection     #33285c  plain
  meterFill     #3d6047  plain
  border        #312c42  plain
  borderStrong  #443c5a  plain
  diffAdd       #16301f  plain
  diffRemove    #3a1626  plain
  errorGround   #c05a72  plain
  mAuto         #63512a  plain
  mAccept       #4a3470  plain
  mPlan         #2a4570  plain
  mManual       #3a3450  plain
  skipGround    #6e1a34  plain
  focusGround   #292339  plain
  errorInk      #000000  plain
  mInk          #f4f0ff  plain
  skipInk       #ffeef4  plain
  pick          #c79bf0  plain
  pickInk       #000000  plain
  link          #7fd4d4  plain
  linkInk       #000000  plain
  chosen        #8fd1a0  plain
  chosenInk     #000000  plain
── mono (dark)
  · tones
  default       #e0e0e0  plain
  dim           #9a9a9a  plain
  muted         #8a8a8a  plain
  ok            #b8b8b8  plain
  warn          #d0d0d0  plain
  error         #ffffff  plain
  info          #a8a8a8  plain
  accent        #f0f0f0  plain
  meta          #8e8e8e  plain
  identifier    #c4c4c4  plain
  · surfaces
  bg            #161616  plain
  bgElev        #1e1e1e  plain
  bgDeep        #111111  plain
  selection     #333333  plain
  meterFill     #555555  plain
  border        #2a2a2a  plain
  borderStrong  #3a3a3a  plain
  diffAdd       #1f1f1f  plain
  diffRemove    #2b2b2b  plain
  errorGround   #e0e0e0  plain
  mAuto         #4a4a4a  plain
  mAccept       #3a3a3a  plain
  mPlan         #2e2e2e  plain
  mManual       #242424  plain
  skipGround    #5a5a5a  plain
  focusGround   #2a2a2a  plain
  errorInk      #161616  plain
  mInk          #f0f0f0  plain
  skipInk       #ffffff  plain
  pick          #ffffff  plain
  pickInk       #000000  plain
  link          #c4c4c4  plain
  linkInk       #000000  plain
  chosen        #b8b8b8  plain
  chosenInk     #000000  plain
── paper (light)
  · tones
  default       #3a3530  plain
  dim           #6b625a  plain
  muted         #6f675d  plain
  ok            #3f7040  plain
  warn          #8a6008  plain
  error         #b3301f  plain
  info          #1f6b94  plain
  accent        #1a56c4  plain
  meta          #8d3f8f  plain
  identifier    #0a6b7a  plain
  · surfaces
  bg            #f7f4ee  plain
  bgElev        #efeae1  plain
  bgDeep        #e6e0d5  plain
  selection     #d6e4f0  plain
  meterFill     #cddfc3  plain
  border        #d8d0c2  plain
  borderStrong  #c4baa8  plain
  diffAdd       #dff0dc  plain
  diffRemove    #fae3de  plain
  errorGround   #a52f22  plain
  mAuto         #f0e0b4  plain
  mAccept       #ecd9ef  plain
  mPlan         #d4e6f2  plain
  mManual       #ddd6c8  plain
  skipGround    #8c231a  plain
  focusGround   #e4ddd0  plain
  errorInk      #fff8f4  plain
  mInk          #2e2a24  plain
  skipInk       #fff4f0  plain
  pick          #1a56c4  plain
  pickInk       #ffffff  plain
  link          #0a6b7a  plain
  linkInk       #ffffff  plain
  chosen        #3f7040  plain
  chosenInk     #ffffff  plain"
`;
